--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -37,3 +37,110 @@ html.no-js
     div.footer
       a.ss-icon.ss-social-circle.social-link(href="#") facebook
       a.ss-icon.ss-social-circle.social-link(href="#") twitter
+      
+  div#calendar-picker-contain
+    div#calendar-picker
+        table.table-bordered.table-striped.table-collapsed
+            thead
+              tr
+                th.buttons(colspan="7")
+                  div.btn-group
+                    a.btn 
+                      i.icon-chevron-left
+                    a.btn.center-btn November 2012
+                    a.btn
+                      i.icon-chevron-right
+              tr
+                th.day-of-week Sun
+                th.day-of-week Mon
+                th.day-of-week Tue
+                th.day-of-week Wed
+                th.day-of-week Thu
+                th.day-of-week Fri
+                th.day-of-week Sat
+          
+            tbody
+              tr
+                td.muted 
+                  a.day(href='#') 28
+                td.muted 
+                  a.day(href='#') 29
+                td.muted
+                  a.day(href='#') 30
+                td.muted
+                  a.day(href='#') 31
+                td
+                  a.day(href='#') 1
+                td 
+                  a.day(href='#') 2
+                td 
+                  a.day.today(href='#') 3
+                
+              
+              tr
+                td 
+                  a.day(href='#') 4
+                td 
+                  a.day(href='#') 5
+                td 
+                  a.day(href='#') 6
+                td 
+                  a.day(href='#') 7
+                td 
+                  a.day(href='#') 8
+                td 
+                  a.day(href='#') 9
+                td 
+                  a.day(href='#') 10
+              
+              tr
+                td 
+                  a.day(href='#') 11
+                td 
+                  a.day(href='#') 12
+                td 
+                  a.day(href='#') 13
+                td 
+                  a.day(href='#') 14
+                td 
+                  a.day(href='#') 15
+                td 
+                  a.day(href='#') 16
+                td 
+                  a.day(href='#') 17
+                
+              
+              tr
+                td 
+                  a.day(href='#') 18
+                td 
+                  a.day(href='#') 19
+                td 
+                  a.day(href='#') 20
+                td 
+                  a.day(href='#') 21
+                td 
+                  a.day(href='#') 22
+                td 
+                  a.day(href='#') 23
+                td 
+                  a.day(href='#') 24
+                
+              tr
+                td 
+                  a.day(href='#') 25
+                td 
+                  a.day(href='#') 26
+                td 
+                  a.day(href='#') 27
+                td 
+                  a.day(href='#') 28
+                td 
+                  a.day(href='#') 29
+                td.muted 
+                  a.day(href='#') 1
+                td.muted 
+                  a.day(href='#') 2
+                
+  
+  
