--- a/webapp/public/css/kitchenly.css
+++ b/webapp/public/css/kitchenly.css
@@ -342,6 +342,13 @@ a.day {
   font-size: 14px;
 }
 
+a.day.today {
+  display: block; 
+  font-size: 14px;
+  background: #952B47;
+  color: #fff;
+}
+
 a:hover.day {
   text-decoration: none;
   display: block;
