--- a/webapp/views/search.jade
+++ b/webapp/views/search.jade
@@ -17,14 +17,15 @@ div.page-contain.container
                     input#location.typeahead.span4(type="text", placeholder="What city do you want to eat in?")
                     span.add-on
                         i.icon-map-marker
-
+                        
                 div#date-picker.input-append.pull-left
-                    input#appendedInput.span4(type="text", placeholder="When do you want to eat?")
+                    input#date-time.span4(type="text", rel="popover", data-placement="bottom", placeholder="When do you want to eat?")
                     span.add-on
                         i.icon-calendar
 
                 div#guest-number-picker.btn-group.pull-left
-                    button.btn.dropdown-toggle.span2(data-toggle="dropdown") 2 guests
+                    button.btn.dropdown-toggle.span2(data-toggle="dropdown") 
+                        span.num 2 guests
                         i.icon-user.pull-right
                     ul.dropdown-menu
                         li
@@ -53,99 +54,47 @@ div.page-contain.container
     div.result-grid.container
         div.row.result-row
 
-            div.span3.result-box
-                img.result-main-img(src="http://placehold.it/140x140")
-                h4.result-title
-                    a(href="#result-modal-1", data-toggle="modal") Dinner Title
-                        span.price-range.pull-right$$$
-                div.venue
-                    i.icon-map-marker.icon-white
-                    span Park City
+            each user, index in users
+                div.span3.result-box
+                    - if (typeof(user.venues) !== 'undefined' && user.venues.length > 0)
+                        img.result-main-img(src="#{user.venues[0].photo_url}")
+                        h4.result-title
+                            a(href="#result-modal-#{index}", data-toggle="modal") #{user.venues[0].name}
+                                span.price-range.pull-right //#{user.venues[0].price}
+                    div.venue
+                        i.icon-map-marker.icon-white
+                        - if (typeof(user.venues) !== 'undefined' && user.venues.length > 0 && user.venues[0].location)
+                            span #{user.venues[0].location.city}, #{user.venues[0].location.state}
 
-                div.result-meta
-                    div.host-bio
-                        img.host-user-img.pull-left(src="img/melissa.png")
-                        div.host-name Melissa Pearl Jones
-                        div.host-rating
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
+                    div.result-meta
+                        div.host-bio
+                            img.host-user-img.pull-left(src="#{user.photo_url}")
+                            div.host-name #{user.name.first_name} #{user.name.last_name}
+                            div.host-rating
+                                i.icon-star.icon-white
+                                i.icon-star.icon-white
+                                i.icon-star.icon-white
+                                i.icon-star.icon-white
 
-            div.span3.result-box
+                div.modal.hide(id="result-modal-#{index}")
+                    div.modal-header
+                        button.close(type="button", data-dismiss="modal") &times;
+                        h3 #{user.venues[0].name}
+                        div.location
+                          i.icon-map-marker
+                          span.city-name #{user.venues[0].location.city}, #{user.venues[0].location.state}
 
-                img.result-main-img(src="http://placehold.it/140x140")
-                h4.result-title
-                    a(href="#result-modal-1", data-toggle="modal") Dinner Title
-                      span.price-range.pull-right $$$
-                div.venue
-                    i.icon-map-marker.icon-white
-                    span Park City
+                    div.modal-body
+                        div.meta
+                            div.host-bio
 
-                div.result-meta
-                    div.host-bio
-                        img.host-user-img(src="http://placehold.it/23x23") Bilbo Baggins
-                        span.rating
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
+                              img.host-user-img-big.pull-left(src="#{user.photo_url}")
+                              div.host-name #{user.name.first_name} #{user.name.last_name}
+                              div.host-rating
+                                  i.icon-star
+                                  i.icon-star
+                                  i.icon-star
+                                  i.icon-star
 
-            div.span3.result-box
-
-                img.result-main-img(src="img/lasagna.jpg")
-                h4.result-title
-                    a(href="#result-modal-1", data-toggle="modal") Dinner Title
-                        span.price-range.pull-right $$$
-                div.venue
-                    i.icon-map-marker.icon-white
-                    span Park City
-
-                div.result-meta
-                    div.host-bio
-                        img.host-user-img(src="http://placehold.it/23x23") Bilbo Baggins
-                        span.rating
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-
-            div.span3.result-box
-                img.result-main-img(src="http://placehold.it/140x140")
-                h4.result-title
-                    a(href="#result-modal-1", data-toggle="modal") Dinner Title
-                        span.price-range.pull-right $$$
-                div.venue
-                    i.icon-map-marker.icon-white
-                    span Park City
-
-                div.result-meta
-                    div.host-bio
-                        img.host-user-img(src="http://placehold.it/23x23") Bilbo Baggins
-                        span.rating
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-                            i.icon-star.icon-white
-
-    div#result-modal-1.modal.hide
-        div.modal-header
-            button.close(type="button", data-dismiss="modal")&times;
-            h3 Dinner Title
-            div.location
-              i.icon-map-marker
-              span.city-name Park City
-              
-        div.modal-body
-            div.meta
-                div.host-bio
-                  img.host-user-img-big.pull-left(src="img/melissa.png")
-                  div.host-name Melissa Pearl Jones
-                  div.host-rating
-                      i.icon-star
-                      i.icon-star
-                      i.icon-star
-                      i.icon-star
-
-        div.modal-footer
-            a.btn.btn-primary.btn-large(href="#") Book It!
+                    div.modal-footer
+                        a.btn.btn-primary.btn-large(href="#") Book It!
