--- a/webapp/public/bootstrap/less/variables.less
+++ b/webapp/public/bootstrap/less/variables.less
@@ -44,8 +44,14 @@
 
 // Typography
 // -------------------------
-@sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
-@serifFontFamily:       Georgia, "Times New Roman", Times, serif;
+//@sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
+//@serifFontFamily:       Georgia, "Times New Roman", Times, serif;
+//@monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
+
+// Typography
+// ------------------------
+@sansFontFamily:        "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@serifFontFamily:       "pt-serif", Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
 @baseFontSize:          14px;
