fixing image widths

--- a/webapp/public/bootstrap/css/responsive.css
+++ b/webapp/public/bootstrap/css/responsive.css
@@ -402,6 +402,16 @@
   .row-fluid .thumbnails {
     margin-left: 0;
   }
+  .result-main-img-contain {
+    height: mainImgContainWidth;
+    width: mainImgContainWidth;
+    overflow: hidden;
+  }
+  .result-main-img {
+    max-height: 270px;
+    min-height: 270px;
+    min-width: 270px;
+  }
 }
 @media (min-width: 768px) and (max-width: 979px) {
   .row {
@@ -717,6 +727,16 @@
   }
   input.span1, textarea.span1, .uneditable-input.span1 {
     width: 28px;
+  }
+  .result-main-img-contain {
+    height: mainImgContainWidth;
+    width: mainImgContainWidth;
+    overflow: hidden;
+  }
+  .result-main-img {
+    max-height: 166px;
+    min-height: 166px;
+    min-width: 166px;
   }
 }
 @media (max-width: 767px) {
