--- a/webapp/public/bootstrap/less/responsive-1200px-min.less
+++ b/webapp/public/bootstrap/less/responsive-1200px-min.less
@@ -24,5 +24,21 @@
   .row-fluid .thumbnails {
     margin-left: 0;
   }
+  
+@mainImgColWidth: (@gridColumnWidth1200 * 3);
+@mainImgGutWidth: (@gridGutterWidth1200 * 2);
+@mainImgContainWidth: (@mainImgColWidth + @mainImgGutWidth);
+
+.result-main-img-contain {  
+  height: mainImgContainWidth;
+  width: mainImgContainWidth;
+  overflow: hidden;
+}
+
+.result-main-img {
+  max-height: @mainImgContainWidth;
+  min-height: @mainImgContainWidth;
+  min-width: @mainImgContainWidth;
+}
 
 }
