this version is working-ish

--- a/webapp/views/index.jade
+++ b/webapp/views/index.jade
@@ -59,4 +59,4 @@ div.page-contain.container
                 li
                   a(href="#") 8 Guests
                   
-        button#search-button.btn.btn-primary.btn-large.pull-left(type="submit") Search for Dinner  
+        a#search-button.btn.btn-primary.btn-large.pull-left(href="/search") Search for Dinner  
