--- a/webapp/views/payment.jade
+++ b/webapp/views/payment.jade
@@ -2,32 +2,53 @@
   script(src='https://js.stripe.com/v1/')
   script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js')
   script(src='/scripts/payment.js')
-div#stripe-form
-  form(action="", method="POST",id="payment-form")
-    div.form-row
-      div.cc-type Card Type
-      select.card-type
-        option(value="Visa", selected) VISA
-        option(value="American Express") American Express 
-        option(value="MasterCard") MasterCard
-        option(value="Discover") Discover
-        option(value="JCB") JCB 
-        option(value="Diners Club") Diners Club
-    div.form-row
-      div.cc-text Card card-number
-      input(type="text",size="30",autocomplete="off",class="card-number",value="4242424242424242")
-    div.form-row
-      div.cc-text CVC
-      input(type="text",size="4",autocomplete="off",class="card-cvc",value="123")
-    div.form-row
-      div.cc-text Expiration (MM/YYYY)
-      input(type="text",size="2",class="card-expiry-month",value="12")
-      span /
-      input(type="text",size="4",class="card-expiry-year",value="2012")
-    div.form-row
-      input(type="hidden",name="amount",value="2000",id="cc-amount")
-      input(type="hidden",name="currency",value="usd",id="cc-currency")
-    div.form-row
-      button(type="submit",class="submit-button") Submit Payment
-    div.form-row
-      div#errors.hidden
+
+header.site-header 
+  div.container
+    h1.kitchenly-branding.tk-mic-32-new-web.pull-left 
+      a(href='/') kitchen.ly
+    div.pull-right
+      ul#user-nav.unstyled.nav.nav-pills
+        li.pull-left 
+          a.sign-up-link(href='/') Sign Up
+        li.dropdown.pull-left
+          a.dropdown-toggle(href='#', data-toggle='dropdown') Login
+          .dropdown-menu(style='padding: 15px; margin-left: -203px; margin-top:-6px; padding-bottom: 0px;')
+            form(method='post', action='login', accept-charset='UTF-8')
+              input#username(style='margin-bottom: 15px;', type='text', placeholder='Username', name='username')
+              input#password(style='margin-bottom: 15px;', type='password', placeholder='Password', name='password')
+              input#remember-me(style='float: left; margin-right: 10px;', type='checkbox', name='remember-me', value='1')
+              label.string.optional(for='user_remember_me')  Remember me
+              input#sign-in.btn.btn-primary.btn-block(type='submit', value='Sign In')
+
+div.page-contain.container
+    h1 Make Payment
+    div#stripe-form
+      form(action="", method="POST",id="payment-form")
+        div.form-row
+          div.cc-type Card Type
+          select.card-type
+            option(value="Visa", selected) VISA
+            option(value="American Express") American Express 
+            option(value="MasterCard") MasterCard
+            option(value="Discover") Discover
+            option(value="JCB") JCB 
+            option(value="Diners Club") Diners Club
+        div.form-row
+          div.cc-text Card card-number
+          input(type="text",size="30",autocomplete="off",class="card-number",value="4242424242424242")
+        div.form-row
+          div.cc-text CVC
+          input(type="text",size="4",autocomplete="off",class="card-cvc",value="123")
+        div.form-row
+          div.cc-text Expiration (MM/YYYY)
+          input(type="text",size="2",class="card-expiry-month",value="12")
+          span /
+          input(type="text",size="4",class="card-expiry-year",value="2012")
+        div.form-row
+          input(type="hidden",name="amount",value="2000",id="cc-amount")
+          input(type="hidden",name="currency",value="usd",id="cc-currency")
+        div.form-row
+          button(type="submit",class="submit-button btn btn-submit btn-primary") Submit Payment
+        div.form-row
+          div#errors.hidden
