--- a/webapp/views/search.jade
+++ b/webapp/views/search.jade
@@ -6,8 +6,15 @@ header.site-header
       ul#user-nav.unstyled.nav.nav-pills
         li.pull-left 
           a.sign-up-link(href='/') Sign Up
-        li.pull-left
-          a.sign-in-link(href='/') Login 
+        li.dropdown.pull-left
+          a.dropdown-toggle(href='#', data-toggle='dropdown') Login
+          .dropdown-menu(style='padding: 15px; margin-left: -203px; margin-top:-6px; padding-bottom: 0px;')
+            form(method='post', action='login', accept-charset='UTF-8')
+              input#username(style='margin-bottom: 15px;', type='text', placeholder='Username', name='username')
+              input#password(style='margin-bottom: 15px;', type='password', placeholder='Password', name='password')
+              input#remember-me(style='float: left; margin-right: 10px;', type='checkbox', name='remember-me', value='1')
+              label.string.optional(for='user_remember_me')  Remember me
+              input#sign-in.btn.btn-primary.btn-block(type='submit', value='Sign In')
 
 div.page-contain.container
     div#navbar-secondary.navbar.navbar-inverse
