--- a/webapp/views/search.jade
+++ b/webapp/views/search.jade
@@ -21,12 +21,12 @@ div.page-contain.container
         div.navbar-inner
             form.navbar-form.pull-left
                 div#city-picker.input-append.pull-left
-                    input#location.typeahead.span4(type="text", placeholder="What city do you want to eat in?")
+                    input#location.typeahead.span4(type="text", placeholder="Ogden, UT")
                     span.add-on
                         i.icon-map-marker
                         
                 div#date-picker.input-append.pull-left
-                    input#date-time.span4(type="text", rel="popover", data-placement="bottom", placeholder="When do you want to eat?")
+                    input#date-time.span4(type="text", rel="popover", data-placement="bottom", placeholder="Saturday, November 3, 2012")
                     span.add-on
                         i.icon-calendar
 
