--- a/webapp/views/search.jade
+++ b/webapp/views/search.jade
@@ -1,8 +1,9 @@
 block scripts
    script(src='http://maps.google.com/maps/api/js?sensor=false')
    script(src='/scripts/map.js')
-    
-header.site-header 
+    script(src='/scripts/searchResults.js')
+
+header.site-header
   div.container
     h1.kitchenly-branding.tk-mic-32-new-web.pull-left 
       a(href='/') kitchen.ly
@@ -70,7 +71,7 @@ div.page-contain.container
                     - if (typeof(user.venues) !== 'undefined' && user.venues.length > 0)
                         div.result-main-img-contain
                           a(href="#result-modal-#{index}", data-toggle="modal")
-                            img.result-main-img(src="#{user.venues[0].photo_url}")
+                            img.result-main-img(src="../images/#{user.venues[0].photo_url}")
                         h4.result-title
                             a(href="#result-modal-#{index}", data-toggle="modal") #{user.venues[0].name}
                                 span.price-range.pull-right //#{user.venues[0].price}
@@ -81,7 +82,7 @@ div.page-contain.container
 
                     div.result-meta
                         div.host-bio
-                            img.host-user-img.pull-left(src="#{user.photo_url}")
+                            img.host-user-img.pull-left(src="../images/#{user.photo_url}")
                             div.host-name #{user.name.first_name} #{user.name.last_name}
                             div.host-rating
                                 i.icon-star.icon-white
@@ -94,21 +95,37 @@ div.page-contain.container
                         button.close(type="button", data-dismiss="modal") &times;
                         h3 #{user.venues[0].name}
                         div.location
-                          i.icon-map-marker
-                          span.city-name #{user.venues[0].location.city}, #{user.venues[0].location.state}
+                            i.icon-map-marker
+                            span.city-name #{user.venues[0].location.city}, #{user.venues[0].location.state}
 
                     div.modal-body
-                        img.result-main-img(src="#{user.venues[0].photo_url}")
+                        img.result-main-img(src="../images/#{user.venues[0].photo_url}")
                         div.meta
 
                     div.modal-footer
                         div.host-bio.span3.pull-left
-                          img.host-user-img-big.pull-left(src="#{user.photo_url}")
-                          div.host-name.pull-left #{user.name.first_name} #{user.name.last_name}
-                          div.host-rating.pull-left
-                              i.icon-star
-                              i.icon-star
-                              i.icon-star
-                              i.icon-star
+                            img.host-user-img-big.pull-left(src="../images/#{user.photo_url}")
+                            div.host-name.pull-left #{user.name.first_name} #{user.name.last_name}
+                            div.host-rating.pull-left
+                                i.icon-star
+                                i.icon-star
+                                i.icon-star
+                                i.icon-star
                         div.pull-right
-                            a.btn.btn-primary.btn-large(href="/payment") Book It!
+                            span Description:
+                            span #{user.description}
+                            span Guest Limits:
+                            - if (user.guest_limit)
+                                span #{user.guest_limit.minimum}
+                                span #{user.guest_limit.maximum}
+                            span Specialties:
+                            - if (user.specialties)
+                                span #{user.specialties}
+                                each specialty in user.specialties
+                                    span #{specialty}
+                            span Reviews:
+                            - if (user.reviews)
+                                each review in user.reviews
+                                    span #{review.comment}
+                                    span #{review.rating}
+                            a.book-now.btn.btn-primary.btn-large(id="book-now-modal-#{index}", href="#", data-uname="#{user.username}", data-uid="#{user._id}") Book It!
